--- a/pppppp/CreatePoint/SelfCheckView.storyboard
+++ b/pppppp/CreatePoint/SelfCheckView.storyboard
@@ -88,8 +88,8 @@
                                     <constraint firstItem="uHv-AV-Mjc" firstAttribute="leading" secondItem="DQd-Nj-fbT" secondAttribute="leading" constant="24" id="mq4-Rp-YMz"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How much effort did you make today?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrI-Ab-Gxe">
-                                <rect key="frame" x="37" y="385.5" width="340" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rate your effort today!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrI-Ab-Gxe">
+                                <rect key="frame" x="106.5" y="385.5" width="201.5" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
