--- a/pppppp/View/AuthView/SettingView.storyboard
+++ b/pppppp/View/AuthView/SettingView.storyboard
@@ -37,7 +37,7 @@
                                 </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="SentFeedback"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Feedback"/>
                                 <connections>
                                     <action selector="sceneGoogleForm" destination="hPF-NO-teZ" eventType="touchUpInside" id="Ubv-b2-bej"/>
                                 </connections>
