--- a/pppppp/View/UserData/ChangeProfileView.storyboard
+++ b/pppppp/View/UserData/ChangeProfileView.storyboard
@@ -65,7 +65,7 @@
                                     <action selector="changeProfile" destination="hwt-d6-8BX" eventType="touchUpInside" id="Oyx-EX-349"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="change your name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5xC-7x-6aS">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5xC-7x-6aS">
                                 <rect key="frame" x="32" y="424" width="350" height="48"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.50980392159999999" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
