--- a/pppppp/View/Base.lproj/Main.storyboard
+++ b/pppppp/View/Base.lproj/Main.storyboard
@@ -23,31 +23,31 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t8K-Wk-ggZ">
                                         <rect key="frame" x="80" y="320" width="254" height="256"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome！" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqh-HD-xJI">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqh-HD-xJI">
                                                 <rect key="frame" x="0.0" y="40" width="254" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
+                                                <color key="highlightedColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NRJ-aG-eSv">
-                                                <rect key="frame" x="0.0" y="185" width="254" height="31"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AtT-8W-G7w">
+                                                <rect key="frame" x="40" y="201" width="174" height="31"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Button">
                                                     <color key="baseForegroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
                                                 <connections>
-                                                    <action selector="noFriendButton" destination="C6X-Qw-bEO" eventType="touchUpInside" id="d5B-R3-a7a"/>
+                                                    <action selector="noFriendButton" destination="C6X-Qw-bEO" eventType="touchUpOutside" id="CwX-Th-kip"/>
                                                 </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="NRJ-aG-eSv" secondAttribute="bottom" constant="40" id="PZr-2e-Yb9"/>
-                                            <constraint firstAttribute="trailing" secondItem="NRJ-aG-eSv" secondAttribute="trailing" id="aYZ-ho-eOr"/>
+                                            <constraint firstAttribute="bottom" secondItem="AtT-8W-G7w" secondAttribute="bottom" constant="24" id="7h1-eA-CA7"/>
+                                            <constraint firstItem="AtT-8W-G7w" firstAttribute="leading" secondItem="t8K-Wk-ggZ" secondAttribute="leading" constant="40" id="GNd-ii-BWh"/>
+                                            <constraint firstAttribute="trailing" secondItem="AtT-8W-G7w" secondAttribute="trailing" constant="40" id="neY-iB-17u"/>
                                             <constraint firstAttribute="trailing" secondItem="cqh-HD-xJI" secondAttribute="trailing" id="q61-eX-OX1"/>
                                             <constraint firstItem="cqh-HD-xJI" firstAttribute="top" secondItem="t8K-Wk-ggZ" secondAttribute="top" constant="40" id="rBh-3d-OK2"/>
                                             <constraint firstItem="cqh-HD-xJI" firstAttribute="leading" secondItem="t8K-Wk-ggZ" secondAttribute="leading" id="w35-7G-Ldn"/>
-                                            <constraint firstItem="NRJ-aG-eSv" firstAttribute="leading" secondItem="t8K-Wk-ggZ" secondAttribute="leading" id="wHk-Hn-mNx"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -79,7 +79,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="mountainView" destination="ndx-UB-OiK" id="I8o-hY-XwT"/>
-                        <outlet property="noFriendButtonLayout" destination="NRJ-aG-eSv" id="Ywd-dS-xCh"/>
+                        <outlet property="noFriendButtonLayout" destination="AtT-8W-G7w" id="ZOP-VB-Wyp"/>
                         <outlet property="noFriendLabel" destination="cqh-HD-xJI" id="2Pn-8w-zKo"/>
                         <outlet property="noFriendView" destination="t8K-Wk-ggZ" id="ncv-vF-xMT"/>
                     </connections>
