--- a/pppppp/View/AuthView/SettingView.storyboard
+++ b/pppppp/View/AuthView/SettingView.storyboard
@@ -55,6 +55,10 @@
                                     <action selector="logoutButton" destination="hPF-NO-teZ" eventType="touchUpInside" id="MKU-G4-VQS"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8Q4-5E-osd">
+                                <rect key="frame" x="24" y="154" width="366" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hrq-yP-Y2a"/>
                         <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -64,7 +68,10 @@
                             <constraint firstItem="hrq-yP-Y2a" firstAttribute="bottom" secondItem="IhW-ib-xFo" secondAttribute="bottom" constant="136" id="Kgk-uB-Ico"/>
                             <constraint firstItem="cKJ-b3-s25" firstAttribute="top" secondItem="rm5-xE-aWy" secondAttribute="bottom" constant="20" id="PEI-9b-21B"/>
                             <constraint firstItem="cKJ-b3-s25" firstAttribute="centerX" secondItem="Oo8-Nn-8l5" secondAttribute="centerX" id="XcI-x8-ZtJ"/>
+                            <constraint firstItem="hrq-yP-Y2a" firstAttribute="trailing" secondItem="8Q4-5E-osd" secondAttribute="trailing" constant="24" id="YNp-rs-yHl"/>
+                            <constraint firstItem="8Q4-5E-osd" firstAttribute="leading" secondItem="hrq-yP-Y2a" secondAttribute="leading" constant="24" id="ZMK-d2-b2D"/>
                             <constraint firstItem="rm5-xE-aWy" firstAttribute="centerX" secondItem="Oo8-Nn-8l5" secondAttribute="centerX" id="bjg-3F-1Ll"/>
+                            <constraint firstItem="8Q4-5E-osd" firstAttribute="top" secondItem="hrq-yP-Y2a" secondAttribute="top" constant="112" id="fC3-Pr-iH8"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -74,6 +81,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
