--- a/pppppp/View/UserData/RecentActivitysTableViewCell.xib
+++ b/pppppp/View/UserData/RecentActivitysTableViewCell.xib
@@ -48,7 +48,7 @@
                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.15646258503401361" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.16" colorSpace="custom" customColorSpace="displayP3"/>
             <connections>
                 <outlet property="activityLabel" destination="8vG-Hm-y3G" id="Bwk-GL-G6I"/>
                 <outlet property="dateLabel" destination="Rnq-iq-JTl" id="5um-hg-RtU"/>
