--- a/pppppp/View/Base.lproj/Main.storyboard
+++ b/pppppp/View/Base.lproj/Main.storyboard
@@ -26,18 +26,22 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t8K-Wk-ggZ">
-                                        <rect key="frame" x="87" y="328" width="240" height="240"/>
+                                        <rect key="frame" x="103" y="344" width="208" height="208"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqh-HD-xJI">
-                                                <rect key="frame" x="0.0" y="40" width="240" height="29"/>
+                                                <rect key="frame" x="0.0" y="40" width="208" height="29"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                 <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="highlightedColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AtT-8W-G7w">
-                                                <rect key="frame" x="40" y="185" width="160" height="31"/>
+                                                <rect key="frame" x="40" y="128" width="128" height="56"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="56" id="JwT-N5-KsW"/>
+                                                </constraints>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Button">
+                                                    <fontDescription key="titleFontDescription" type="system" weight="heavy" pointSize="24"/>
                                                     <color key="baseForegroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
                                                 <connections>
@@ -48,9 +52,9 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="AtT-8W-G7w" secondAttribute="bottom" constant="24" id="7h1-eA-CA7"/>
-                                            <constraint firstAttribute="width" constant="240" id="E82-BK-Uys"/>
+                                            <constraint firstAttribute="width" constant="208" id="E82-BK-Uys"/>
                                             <constraint firstItem="AtT-8W-G7w" firstAttribute="leading" secondItem="t8K-Wk-ggZ" secondAttribute="leading" constant="40" id="GNd-ii-BWh"/>
-                                            <constraint firstAttribute="height" constant="240" id="Wz9-Sx-u29"/>
+                                            <constraint firstAttribute="height" constant="208" id="Wz9-Sx-u29"/>
                                             <constraint firstAttribute="trailing" secondItem="AtT-8W-G7w" secondAttribute="trailing" constant="40" id="neY-iB-17u"/>
                                             <constraint firstAttribute="trailing" secondItem="cqh-HD-xJI" secondAttribute="trailing" id="q61-eX-OX1"/>
                                             <constraint firstItem="cqh-HD-xJI" firstAttribute="top" secondItem="t8K-Wk-ggZ" secondAttribute="top" constant="40" id="rBh-3d-OK2"/>
